# spotify-downloader-app

./: .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  rustfmt.toml  svelte.config.js  tailwind.config.js
src/: app.css  app.d.ts  constants.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: Xmain.rs  config.rs  constants.rs  main.rs  utils.rs
src-tauri/src/app/: handlers.rs  menu.rs  mod.rs  setup.rs
src/lib/components/icons/: OptionsIcon.svelte  QueueIcon.svelte  SearchIcon.svelte  index.ts
src/lib/components/window/: Main.svelte  Nav.svelte
src/lib/utils/: useTauriEvent.ts
src/routes/: +layout.svelte  +layout.ts
